// Extracted from: Spotify 1.2.52.442 (windows)

syntax = "proto2";

package spotify.player.proto.transfer;

import "context_track.proto";

option optimize_for = CODE_SIZE;

message Playback {
    optional int64 timestamp = 1;
    optional int32 position_as_of_timestamp = 2;
    optional double playback_speed = 3;
    optional bool is_paused = 4;
    optional ContextTrack current_track = 5;
    optional ContextTrack associated_current_track = 6;
    optional int32 associated_position_as_of_timestamp = 7;
}
