// Extracted from: Spotify 1.2.52.442 (windows)

syntax = "proto2";

package spotify.player.proto.transfer;

import "context_track.proto";

option optimize_for = CODE_SIZE;

message Queue {
    repeated ContextTrack tracks = 1;
    optional bool is_playing_queue = 2;
}
